--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/ofirlevy6658/bank-api#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "uuid": "^8.3.2"
+    "mongoose": "^5.12.5",
+    "uuid": "^8.3.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
